Color Contrast Accessibility fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ ul, li {
 	color: #333;
 }
 a {
-	color: #a30e60;
+	color: #ffff00;
 	text-decoration: none;
 }
 a:hover, a:focus {
@@ -110,6 +110,10 @@ nav h1 a {
   width: 100%;
   background-color: #ccc;
 }
+
+.leaflet-container a {
+  color: #008000;
+}
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   display: flex;
@@ -117,12 +121,12 @@ nav h1 a {
   justify-content: center;
   width: 100%;
   height: 50px;
-  background-color: #3397DB;
+  background-color: #353844;
   align-items: center;
 }
 
 .filter-options h2 {
-  color: white;
+  color: #fff;
   font-size: 1rem;
   font-weight: normal;
   line-height: 1;
@@ -174,7 +178,7 @@ nav h1 a {
   min-width: 100%;
 }
 #restaurants-list li h1 {
-  color: #f18200;
+  color: #252831;
   font-family: Arial,sans-serif;
   font-size: 14pt;
   font-weight: 200;
@@ -188,7 +192,7 @@ nav h1 a {
   font-size: 11pt;
 }
 #restaurants-list li a {
-  background-color: #ffa500;
+  background-color: #252831;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
@@ -225,7 +229,7 @@ nav h1 a {
   position: absolute;
   width: 43%;
   margin: 0;
-  color: #e433a9;
+  color: #fff;
 }
 #restaurant-name {
   color: #a80878;
